--- a/app/views/static_pages/accessibility.html.erb
+++ b/app/views/static_pages/accessibility.html.erb
@@ -27,27 +27,19 @@
       <tbody>
         <tr>
           <td class="text-center">0</td>
-          <td>Inicio</td>
+          <td>Portada</td>
         </tr>
         <tr>
           <td class="text-center">1</td>
-          <td>Debates</td>
+          <td>Agendas</td>
         </tr>
         <tr>
           <td class="text-center">2</td>
-          <td>Propuestas</td>
+          <td>Registro de lobbies</td>
         </tr>
         <tr>
           <td class="text-center">3</td>
-          <td>Votaciones</td>
-        </tr>
-        <tr>
-          <td class="text-center">4</td>
-          <td>Presupuestos participativos</td>
-        </tr>
-        <tr>
-          <td class="text-center">5</td>
-          <td>Procesos legislativos</td>
+          <td>Huella normativa</td>
         </tr>
       </tbody>
     </table>
