--- a/app/views/admin/organizations/_reference.html.erb
+++ b/app/views/admin/organizations/_reference.html.erb
@@ -3,4 +3,13 @@
     <%= f.label :reference, t('backend.reference.title') %>
     <%= f.text_field :reference %>
     <%= form_field_errors(f, :reference) %>
+
+    <%= f.label :inscription_date, "Fecha de inscripción" %>
+    <%= f.text_field :inscription_date, class: 'fdatepicker', value: @organization.inscription_date.present? ? I18n.l(@organization.inscription_date, format: :short) : nil %>
+
+    <%= f.label :modification_date, "Fecha de modificación" %>
+    <%= f.text_field :modification_date, readonly: true %>
+
+    <%= f.label :canceled_at, "Fecha de cancelación" %>
+    <%= f.text_field :canceled_at, readonly: true %>
 </fieldset>
