--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="small-12 columns">
-    <%= link_to t('backend.back'), organizations_path , class: "button tiny radius" %>
+    <%= link_to t('backend.back'), organization_back_button , class: "button tiny radius" %>
     <h1 class="title-l"><%= @organization.name %></h1>
     <p>
       <strong><%= t('organizations.show.state') %></strong>
