Add organizations dates to admin organization show. Fix registered lobbies on show. Redirect from backend to admin organization show.

--- a/app/views/admin/organizations/show.html.erb
+++ b/app/views/admin/organizations/show.html.erb
@@ -7,6 +7,34 @@
       <div class="row">
         <div class="small-12 columns"><%= @organization.reference %></div>
       </div>
+      <br>
+      <div class="row">
+        <div class="small-12 medium-4 columns">
+          <strong>Fecha de inscripción</strong>
+        </div>
+
+        <div class="small-12 medium-4 columns">
+          <strong>Feche de modificación</strong>
+        </div>
+
+        <div class="small-12 medium-4 columns">
+          <strong>Feche de baja</strong>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="small-12 medium-4 columns">
+          <%= I18n.l(@organization.inscription_date, format: :short) %>
+        </div>
+
+        <div class="small-12 medium-4 columns">
+          <%= I18n.l(@organization.modification_date, format: :short) if @organization.modification_date.present? %>
+        </div>
+
+        <div class="small-12 medium-4 columns">
+          <%= I18n.l(@organization.canceled_at, format: :short) if @organization.canceled_at.present? %>
+        </div>
+      </div>
   </fieldset>
 
   <fieldset>
@@ -133,7 +161,9 @@
           <p>
             <strong><%= t('backend.identifying_data.registered_lobbies_title') %></strong>
             <% if @organization.registered_lobbies.present? %>
-              <%= t("backend.identifying_data.registered_lobbies.#{@organization.registered_lobbies}") %>
+              <% @organization.registered_lobbies.each do |registered_lobby| %>
+                <p>- <%= registered_lobby.name %></p>
+              <% end %>
             <% end %>
           </p>
         </div>
