--- a/app/views/admin/organizations/index.html.erb
+++ b/app/views/admin/organizations/index.html.erb
@@ -39,7 +39,7 @@
           <%= link_to organization.fullname, organization_path(organization) %>
         </td>
         <td class="right">
-          <%= link_to organization_path(organization),
+          <%= link_to admin_organization_path(organization),
                       target: :_blank,
                       title: t('backend.lobby_show') do %>
             <i class="step fi-eye size-24"></i>
