--- a/app/views/admin/organizations/show.html.erb
+++ b/app/views/admin/organizations/show.html.erb
@@ -455,19 +455,31 @@
     <legend><%= t('backend.terms.title_fieldset') %></legend>
     <div class="row">
       <div class="small-12 column">
-        <p><%= t('backend.terms.denied_public_data') %></p>
+        <p><%= t('backend.terms.certain_term') %></p>
         <p>
-          <%= check_box_tag :denied_public_data, nil, @organization.denied_public_data, disabled: true %> Confirmar
+          <%= check_box_tag :certain_term, nil, @organization.certain_term, disabled: true %> Confirmar
         </p>
         <br />
         <p>
-          <%= t('backend.terms.denied_public_events') %>
+          <%= t('backend.terms.code_of_conduct_term') %>
         </p>
         <p>
-          <%= check_box_tag :denied_public_events, nil, @organization.denied_public_events, disabled: true %> Confirmar
+          <%= check_box_tag :code_of_conduct_term, nil, @organization.code_of_conduct_term, disabled: true %> Confirmar
         </p>
         <br />
-        <p><%= t('backend.terms.last_text') %></p>
+        <p>
+          <%= t('backend.terms.gift_term') %>
+        </p>
+        <p>
+          <%= check_box_tag :gift_term, nil, @organization.gift_term, disabled: true %> Confirmar
+        </p>
+        <br />
+        <p>
+          <%= t('backend.terms.lobby_term') %>
+        </p>
+        <p>
+          <%= check_box_tag :lobby_term, nil, @organization.lobby_term, disabled: true %> Confirmar
+        </p>
       </div>
     </div>
   </fieldset>
