Remove scheduled js validation. Add event model validation.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -48,7 +48,7 @@
 
           <%= link_to event_path(event),
                       target: :_blank,
-                      title: t('organizations.show.title') do %>
+                      title: "Ver" do %>
             <i class="step fi-eye size-24"></i>
           <% end %>
 
