--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -45,13 +45,13 @@
           <small><%= event.position.title %></small>
         </td>
         <td class="event_actions">
-
-          <%= link_to event_path(event),
-                      target: :_blank,
-                      title: "Ver" do %>
-            <i class="step fi-eye size-24"></i>
+          <% if event.status == "accepted" || event.status == "done" %>
+            <%= link_to show_path(event),
+                        target: :_blank,
+                        title: "Ver" do %>
+              <i class="step fi-eye size-24"></i>
+            <% end %>
           <% end %>
-
           <%= link_to edit_event_path(event), title: t('backend.edit') do %>
             <i class="step fi-page-edit size-24"></i>
           <% end if can? :edit, event %>
