--- a/app/views/visitors/show.html.erb
+++ b/app/views/visitors/show.html.erb
@@ -108,7 +108,7 @@
               <%= agent.name %></p>
             <% end %>
             <br />
-            <strong>Empresas repesentadas:</strong>
+            <strong>Empresas/personas físicas  representadas:</strong>
             <br />
             <% @event.event_represented_entities.each do |represented_entity| %>
               <%= represented_entity.name %></p>
