--- a/app/views/organizations/_search_form.html.erb
+++ b/app/views/organizations/_search_form.html.erb
@@ -5,8 +5,6 @@
     <div class="small-12 medium-12 large-4 columns">
       <%= label_tag :area, t("organizations.description"), class: 'title-s' %>
       <%= text_field_tag :keyword, params[:keyword], placeholder: t("main.form.keyword") %>
-      <%= check_box_tag(:lobby_activity, value = "1", checked = check_filter_lobby_activity , id: "lobby_activity")%>
-      <%= label_tag(:lobby_activity, t("backend.lobby_activity")) %>
     </div>
 
     <div class="small-12 medium-6 large-3 columns">
@@ -36,6 +34,10 @@
       <%= link_to t("main.form.clear"), organizations_path, class: "button secondary small" %>
       <%= submit_tag t("main.form.search"), class: "button small" %>
       <br />
+    </div>
+    <div class="small-12 medium-12 large-12 columns">
+      <%= check_box_tag(:lobby_activity, value = "1", checked = check_filter_lobby_activity , id: "lobby_activity")%>
+      <%= label_tag(:lobby_activity, "Mostrar solo lobbies con reuniones publicadas en la Agenda") %>
     </div>
   <% end %>
   <hr />
