--- a/app/views/registration_lobbies/index.html.erb
+++ b/app/views/registration_lobbies/index.html.erb
@@ -18,12 +18,18 @@
 
   <div class="small-12 medium-4 column">
     <figure data-equalizer-watch>
-      <%= link_to 'https://sede.madrid.es', taget: 'blank'  do %>
+      <%= link_to new_organization_path, target: '_blank'  do %>
         <%= image_tag 'homepage/drop-out.jpg', alt: t('registration_lobbies_index.subscribe_unsubscribe.subscribe_unsubscribe_title')%>
       <% end %>
       <div class="content">
-        <%= link_to 'https://sede.madrid.es', taget: 'blank'  do %>
-          <p><strong><%= t'registration_lobbies_index.subscribe_unsubscribe.subscribe_unsubscribe_title' %></strong></p>
+        <%= link_to new_organization_path, target: '_blank'  do %>
+          <strong>Alta</strong> |
+        <% end %>
+        <%= link_to destroy_organization_path, target: '_blank'  do %>
+          <strong>Baja</strong> |
+        <% end %>
+        <%= link_to edit_organization_path, target: '_blank'  do %>
+          <strong>Modificación</strong>
         <% end %>
         <p>
           <%= t'registration_lobbies_index.subscribe_unsubscribe.subscribe_unsubscribe_description' %>
@@ -70,11 +76,11 @@
 
   <div class="small-12 medium-4 column">
     <figure data-equalizer-watch>
-      <%= link_to 'falta link' do %>
+      <%= link_to root_path do %>
         <% image_tag 'homepage/stats.jpg',  alt: t('registration_lobbies_index.stats.stats_title') %>
       <% end %>
       <div class="content">
-        <%= link_to 'falta link' do %>
+        <%= link_to root_path do %>
           <p><strong><%= t'registration_lobbies_index.stats.stats_title' %></strong></p>
         <% end %>
         <p>
