Create admin agents controller. Extract agent management from organization form.

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -11,6 +11,7 @@
  * file per style scope.
  *
  *= require all
+ *= require admin/agents
  *= require fixes
  *= require foundation-icons
  *= require 'jquery-ui/sortable'
