--- a/app/views/admin/organizations/show.html.erb
+++ b/app/views/admin/organizations/show.html.erb
@@ -367,7 +367,7 @@
       <div class="row">
         <div class="small-12 columns">
           <p>
-            <i><strong><%= t('backend.agents.agents') %> <%= index + 1  %></strong></i>
+            <i><strong><%= t('agents') %> <%= index + 1  %></strong></i>
           </p>
         </div>
         <br />
