Enable tinymce editor on agent edit page and enable source_code plugin on tiny editors

--- a/app/views/admin/agents/_form.html.erb
+++ b/app/views/admin/agents/_form.html.erb
@@ -49,7 +49,7 @@
   <div class="small-12 columns">
     <%= f.label :public_assignments %>
     <br />
-    <%= f.text_area :public_assignments, class: 'mceNoEditor' %>
+    <%= f.text_area :public_assignments, class: agents_public_assignments_editor(@agent) %>
     <%= form_field_errors(f, :public_assignments) %>
   </div>
 
