--- a/app/views/static_pages/websitemap.html.erb
+++ b/app/views/static_pages/websitemap.html.erb
@@ -12,6 +12,6 @@
     <li><a href="/faq"><%= t "websitemap.faq" %></a></li>
     <li><a href="/"><%= t "websitemap.stadistics" %></a></li>
     <li><a href="/infringement_emails/new"><%= t "websitemap.mailbox" %></a></li>
-    <li><a href="/registration_lobbies/index"><%= t "websitemap.regulations_lobbies" %></a></li>
     </ul>
+  <p><a href="/registration_lobbies/index"><%= t "websitemap.regulations_lobbies" %></a></p>
 </div>
