Add attachments to organizations.

--- a/app/views/admin/organizations/_form.html.erb
+++ b/app/views/admin/organizations/_form.html.erb
@@ -10,6 +10,7 @@
   <%= render 'interests', f: f %>
   <%= render 'agents', organization: @organization %>
   <%= render 'terms', f: f %>
+  <%= render 'attachments', f: f %>
   <%= render 'invalidate', f: f %>
 
   <div class="small-4 medium-3 large-2 column">
