--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -123,7 +123,7 @@
       </li>
     <% end %>
     <li>
-      <%= link_to nil, target: "_blank" do %>
+      <%= link_to help_by_role(current_user), target: "_blank" do %>
         <i class="fi-magnifying-glass size-18"> <%= t("header.btn_help")%></i>
       <% end %>
     </li>
