Add new link to normative doc.

--- a/app/views/registration_lobbies/index.html.erb
+++ b/app/views/registration_lobbies/index.html.erb
@@ -41,11 +41,11 @@
 
   <div class="small-12 medium-4 column">
     <figure data-equalizer-watch>
-      <%= link_to faq_path(:anchor => 'faq_24') do %>
+      <%= link_to "/normative/codigo_conducta_incumplimientos_y_normativa.docx", target: "_blank" do %>
         <% image_tag 'homepage/regulations.jpg', alt: t('registration_lobbies_index.normative.normative_title') %>
       <% end %>
       <div class="content">
-        <%= link_to faq_path(:anchor => 'faq_24') do %>
+        <%= link_to "/normative/codigo_conducta_incumplimientos_y_normativa.docx", target: "_blank" do %>
           <p><strong><%= t'registration_lobbies_index.normative.normative_title' %></strong></p>
         <% end %>
         <p>
