--- a/app/views/admin/organizations/_represented_entities_fields.html.erb
+++ b/app/views/admin/organizations/_represented_entities_fields.html.erb
@@ -54,13 +54,21 @@
 
     <div class="small-12 columns">
       <%= f.label :subvention, t('backend.represented_entities.subvention') %>
-      <%= f.check_box :subvention %> Si
+      <%= f.radio_button :subvention, true %>
+      <%= t('backend.lobbies_data.subvention_yes') %>
+      <br>
+      <%= f.radio_button :subvention, false %>
+      <%= t('backend.lobbies_data.subvention_no') %>
       <%= form_field_errors(f, :subvention) %>
     </div>
 
     <div class="small-12 columns">
       <%= f.label :contract, t('backend.represented_entities.contract') %>
-      <%= f.check_box :contract %> Si
+      <%= f.radio_button :contract, true %>
+      <%= t('backend.lobbies_data.contract_yes') %>
+      <br>
+      <%= f.radio_button :contract, false %>
+      <%= t('backend.lobbies_data.contract_no') %>
       <%= form_field_errors(f, :contract) %>
     </div>
 
